--- a/ui/crimestatsmain.ui
+++ b/ui/crimestatsmain.ui
@@ -6,60 +6,228 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>297</height>
+    <width>350</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPlainTextEdit" name="plainTextEdit">
+  <property name="styleSheet">
+   <string notr="true">background: #b3dbd3</string>
+  </property>
+  <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-1</x>
      <y>0</y>
-     <width>111</width>
-     <height>31</height>
+     <width>350</width>
+     <height>300</height>
     </rect>
    </property>
-   <property name="plainText">
-    <string>MoveBuddy</string>
+   <property name="styleSheet">
+    <string notr="true">background: #b3dbd3</string>
    </property>
-  </widget>
-  <widget class="QPlainTextEdit" name="plainTextEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>40</y>
-     <width>111</width>
-     <height>31</height>
-    </rect>
+   <property name="currentIndex">
+    <number>0</number>
    </property>
-   <property name="plainText">
-    <string>Location:</string>
-   </property>
-  </widget>
-  <widget class="QScrollArea" name="scrollArea">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>89</y>
-     <width>271</width>
-     <height>191</height>
-    </rect>
-   </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>269</width>
-      <height>189</height>
-     </rect>
-    </property>
+   <widget class="QWidget" name="page">
+    <widget class="QPushButton" name="returnButton">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>270</y>
+       <width>70</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: white</string>
+     </property>
+     <property name="text">
+      <string>Return</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="background">
+     <property name="geometry">
+      <rect>
+       <x>-4</x>
+       <y>-4</y>
+       <width>361</width>
+       <height>321</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="MoveBuddyTitle">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>140</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;MoveBuddy&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="locationTitle">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>40</y>
+       <width>70</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Location</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="locationDropDown">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>141</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Nottinghamshire</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QComboBox" name="crimeTypeDropDown">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>110</y>
+       <width>261</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Total Crime</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Violence against another person</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Sexual offences</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Robbery</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Theft offences</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Criminal damage and Arson</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Drug offences</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Other crimes</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QLabel" name="typeOfCrimeTitle">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>111</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Type of Crime:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="totalTitle">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>140</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Total:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="comparisonTitle">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>220</y>
+       <width>331</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Press show stats after changing type to show!</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="showStatsButton">
+     <property name="geometry">
+      <rect>
+       <x>260</x>
+       <y>270</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: white</string>
+     </property>
+     <property name="text">
+      <string>Show Stats</string>
+     </property>
+    </widget>
+    <widget class="QLCDNumber" name="LCDNum">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>160</y>
+       <width>141</width>
+       <height>23</height>
+      </rect>
+     </property>
+    </widget>
+    <zorder>background</zorder>
+    <zorder>returnButton</zorder>
+    <zorder>MoveBuddyTitle</zorder>
+    <zorder>locationTitle</zorder>
+    <zorder>locationDropDown</zorder>
+    <zorder>crimeTypeDropDown</zorder>
+    <zorder>typeOfCrimeTitle</zorder>
+    <zorder>totalTitle</zorder>
+    <zorder>comparisonTitle</zorder>
+    <zorder>showStatsButton</zorder>
+    <zorder>LCDNum</zorder>
    </widget>
   </widget>
  </widget>
