--- a/ui/crimestatsmain.ui
+++ b/ui/crimestatsmain.ui
@@ -101,6 +101,11 @@
        <string>Nottinghamshire</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>Derbyshire</string>
+      </property>
+     </item>
     </widget>
     <widget class="QComboBox" name="crimeTypeDropDown">
      <property name="geometry">
@@ -182,7 +187,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>220</y>
+       <y>170</y>
        <width>331</width>
        <height>31</height>
       </rect>
@@ -194,8 +199,8 @@
     <widget class="QPushButton" name="showStatsButton">
      <property name="geometry">
       <rect>
-       <x>260</x>
-       <y>270</y>
+       <x>240</x>
+       <y>260</y>
        <width>89</width>
        <height>25</height>
       </rect>
@@ -210,11 +215,14 @@
     <widget class="QLCDNumber" name="LCDNum">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>160</y>
+       <x>160</x>
+       <y>140</y>
        <width>141</width>
        <height>23</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: grey;</string>
      </property>
     </widget>
     <zorder>background</zorder>
