--- a/ui/crimestatsmain.ui
+++ b/ui/crimestatsmain.ui
@@ -187,29 +187,13 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>170</y>
+       <y>230</y>
        <width>331</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Press show stats after changing type to show!</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="showStatsButton">
-     <property name="geometry">
-      <rect>
-       <x>240</x>
-       <y>260</y>
-       <width>89</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: white</string>
-     </property>
-     <property name="text">
-      <string>Show Stats</string>
+      <string>Change Type Dropdown menu to view crimes!</string>
      </property>
     </widget>
     <widget class="QLCDNumber" name="LCDNum">
@@ -234,7 +218,6 @@
     <zorder>typeOfCrimeTitle</zorder>
     <zorder>totalTitle</zorder>
     <zorder>comparisonTitle</zorder>
-    <zorder>showStatsButton</zorder>
     <zorder>LCDNum</zorder>
    </widget>
   </widget>
